[package]
name = "rquickjs-module"
repository = "https://github.com/rquickjs/rquickjs-module"
description = "An improved module system for rquickjs"
license = "MIT"
authors = [
  "Emile Fugulin <code@efugulin.com>",
  "Richard Davison <richard.davison1@gmail.com>",
]
version = "0.0.1"
edition = "2021"

[dependencies]
rquickjs = { version = "0.8.1", features = ["loader"] }

[dev-dependencies]
rquickjs = { version = "0.8.1", features = ["futures", "macro"] }
tokio = { version = "1", features = ["full"] }
