[package]
name = "rquickjs-extension"
repository = "https://github.com/rquickjs/rquickjs-extension"
description = "An extension system for rquickjs"
license = "MIT"
authors = [
  "Emile Fugulin <code@efugulin.com>",
  "Richard Davison <richard.davison1@gmail.com>",
]
version = "0.0.2"
edition = "2021"

[dependencies]
rquickjs = { version = "0.8.1", features = ["loader"] }

[dev-dependencies]
rquickjs = { version = "0.8.1", features = ["futures", "macro", "parallel"] }
tokio = { version = "1", features = ["full"] }
